--- a/src/main/resources/templates/wizard_get.html
+++ b/src/main/resources/templates/wizard_get.html
@@ -6,13 +6,13 @@
 </head>
 <body>
 <ul>
-    <li th:text="|Id: ${wizard.id}|">$id</li>
-    <li th:text="|First name: ${wizard.firstName}|">$firstName</li>
-    <li th:text="|Last name: ${wizard.lastName}|">$lastName</li>
-    <li th:text="|Birthday: ${wizard.birthday}|">$birthday</li>
-    <li th:text="|Birth place: ${wizard.birthPlace}|">$birthPlace</li>
-    <li th:text="|Biography: ${wizard.biography}|">$biography</li>
-    <li th:text="|Is Muggle: ${wizard.muggle}|">$isMuggle</li>
+    <li th:text="|Id: ${wizard.id}|"></li>
+    <li th:text="|First name: ${wizard.firstName}|"></li>
+    <li th:text="|Last name: ${wizard.lastName}|"></li>
+    <li th:text="|Birthday: ${wizard.birthday}|"></li>
+    <li th:text="|Birth place: ${wizard.birthPlace}|"></li>
+    <li th:text="|Biography: ${wizard.biography}|"></li>
+    <li th:text="|Is Muggle: ${wizard.muggle}|"></li>
 </ul>
 <a href="/">Go back</a>
 </body>
