--- a/src/main/resources/templates/school_get.html
+++ b/src/main/resources/templates/school_get.html
@@ -25,6 +25,14 @@
 
     <input type="submit" value="Modify">
 </form>
+<form action="/school/delete" method="get">
+    <label>Delete by id:</label>
+    <input name="id" placeholder="1" required type="text">
+    <input type="submit" value="Send">
+</form>
+
+
+
 <a href="/">Go back</a>
 </body>
 </html>
