--- a/src/main/resources/templates/wizard_get.html
+++ b/src/main/resources/templates/wizard_get.html
@@ -36,6 +36,23 @@
     <br><br>
     <input type="submit" value="Modify">
 </form>
+
+<form action="/wizard/delete" method="get">
+        <label>Delete by id:</label>
+        <input name="id" placeholder="1" required type="text">
+        <input type="submit" value="Send">
+</form>
+
+
+
+
+
+
+
+
+
+
+
 <a href="/">Go back</a>
 </body>
 </html>
